Fixing issue with mission summaries on mobile

--- a/frontend/styles/sb/block.less
+++ b/frontend/styles/sb/block.less
@@ -64,7 +64,6 @@
   padding-left: 20px;
   padding-right: 20px;
   height: 110px !important;
-  margin-bottom: 20px;
   left: 15px;
   right: 15px;
   bottom: 0;
